src/test/ui/generic-associated-types/parse/trait-path-type-error-once-implemented.stderr
warning: the feature `generic_associated_types` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/trait-path-type-error-once-implemented.rs:1:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information

error[E0107]: this associated type takes 1 lifetime argument but 0 lifetime arguments were supplied
  --> $DIR/trait-path-type-error-once-implemented.rs:5:10
   |
LL |     type Y<'a>;
   |          ^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/trait-path-type-error-once-implemented.rs:5:10
   |
LL |     type Y<'a>;
   |          ^ --
help: add missing lifetime argument
   |
LL |   fn f2<'a>(arg : Box<dyn X<Y<'a1> = &'a ()>>) {}
   |                               ^^

error[E0107]: this associated type takes 0 const arguments but 1 const argument was supplied
  --> $DIR/trait-path-type-error-once-implemented.rs:5:10
   |
LL |       type Y<'a>;
   |  __________^-
   | |          |
   | |          expected 0 const arguments
LL | |
LL | |
LL | | }
LL | |
LL | | const _: () = {
LL | |   fn f2<'a>(arg : Box<dyn X<Y<1> = &'a ()>>) {}
   | |________________________________- help: remove these generics
   |
note: associated type defined here, with 0 const parameters
  --> $DIR/trait-path-type-error-once-implemented.rs:5:10
   |
LL |     type Y<'a>;
   |          ^

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0107`.
